# tradezero-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  tradezero_api.py
.github/workflows/: docs.yml
api/: enums.py  helpers.py  portfolio.py  tradezero_api.py
tradezero_api/: __init__.py  account.py  enums.py  exceptions.py  main.py  notification.py  portfolio.py  time_helpers.py  tradezero.py  utils.py  watchlist.py
