[tool.poetry]
name = "tradezero-api"
version = "0.3.0"
description = "A package for executing orders and retrieving data through the TradeZero web platform"
authors = ["shner-elmo <770elmo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tradezero_api"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"
lxml = "^4.9.2"
pytz = "^2022.7.1"
termcolor = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
